--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale-1.0">
         <title>Gerador de Carteirinha</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -36,7 +39,16 @@
 
         <div class="container2">
             <img src="assets/card_front.png" style="width:505px;height:319px;">
-            <div class="apelido">apelido</div>
+            <div class="apelido">Apelido</div>
+            <div class="idade">Idade</div>
+            <div class="cidade">Cidade</div>
+            <div class="utt">Utt</div>
+            <div class="era">Era</div>
+            <div class="unit">Unit</div>
+        </div>
+
+        <div class="container3">
+            <img src="assets/card_back.png" style="width:505px;height:319px;">
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
