--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <button type="submit">Gerar Carteirinha</button>
             </form>
         </div>   
-
+        
+        <div id="badgeFull" class="badgeFull">
         <div id="badgeFront" class="badgeFront">
             <img src="assets/card_front.png" style="width:505px;height:319px;">
             <div class="apelido" id="badgeNickname"></div>
@@ -49,6 +50,7 @@
 
         <div id="badgeBack" class="badgeBack">
             <img src="assets/card_back.png" style="width:505px;height:319px;">
+        </div>
         </div>
 
         <button id="dwnBadge" class="dwnBadge"> Salvar Card Id</button>
