--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" id="unitfav" required>
 
                 <label for="pict">Foto:</label>
-                <input type="file" id="pict" accept="image/*">
+                <input type="file" id="pict" accept="image/*" required>
 
                 <button type="submit">Gerar Carteirinha</button>
             </form>
@@ -60,7 +60,7 @@
 
         <div id="badgeBack" class="badgeBack">
             <img src="assets/verso_card.jpg" style="width:505px;height:319px;">
-            <div class="ID" id="badgeUnit">XXXXXX</div>
+            <div class="ID" id="badgeID">XXXXXX</div>
         </div>
         </div>
 
