--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <body>
         <div id="formContainer" class="container">
             <h1>Gerador de Card Id</h1>
+            
             <form id="badgeForm">
 
                 <label for="nickname">Apelido:</label>
@@ -36,7 +37,8 @@
                 <label for="pict">Foto:</label>
                 <input type="file" id="pict" accept="image/*" required>
 
-                <button type="submit">Gerar Carteirinha</button>
+                <button type="submit">Gerar Card Id</button>
+                <h4>v1.0.0</h4>
             </form>
         </div>   
         
@@ -49,18 +51,18 @@
             <div>
                 <img class="foto" id="badgePict" style="width:132px;height:179px;">
             </div>
-            <div class="apelido" id="badgeNickname">XXXXXXX</div>
-            <div class="idade" id="badgeAge">XXXXXXX</div>
-            <div class="cidade" id="badgeCity">XXXXXXX</div>
-            <div class="bias" id="badgeBias">XXXXXXX</div>
-            <div class="era" id="badgeEra">XXXXXXX</div>
-            <div class="unit" id="badgeUnit">XXXXXXX</div>
+            <div class="apelido" id="badgeNickname">Apelido: XXXXXXXX</div>
+            <div class="idade" id="badgeAge">Idade: XXXXXXXX</div>
+            <div class="cidade" id="badgeCity">Cidade: XXXXXXX </div>
+            <div class="bias" id="badgeBias">Utt ou Bias: XXXXXX</div>
+            <div class="era" id="badgeEra">Era Fav: XXXXXX</div>
+            <div class="unit" id="badgeUnit">Unit Fav: XXXXXXX</div>
 
         </div>
 
         <div id="badgeBack" class="badgeBack">
             <img src="assets/verso_card.jpg" style="width:505px;height:319px;">
-            <div class="ID" id="badgeID">XXXXXX</div>
+            <div class="ID" id="badgeID">XXXXXXXX</div>
         </div>
         </div>
 
