--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <input type="file" id="pict" accept="image/*" required>
 
                 <button type="submit">Gerar Card Id</button>
-                <h4>v1.0.0</h4>
+                <h4>v1.0.2</h4>
             </form>
         </div>   
         
@@ -52,10 +52,10 @@
                 <img class="foto" id="badgePict" style="width:132px;height:179px;">
             </div>
             <div class="apelido" id="badgeNickname">Apelido: XXXXXXXX</div>
-            <div class="idade" id="badgeAge">Idade: XXXXXXXX</div>
+            <div class="idade" id="badgeAge">Idade: XX</div>
             <div class="cidade" id="badgeCity">Cidade: XXXXXXX </div>
             <div class="bias" id="badgeBias">Utt ou Bias: XXXXXX</div>
-            <div class="era" id="badgeEra">Era Fav: XXXXXX</div>
+            <div class="era" id="badgeEra">Era Fav: XXXXXXXX XXXXXXXXX</div>
             <div class="unit" id="badgeUnit">Unit Fav: XXXXXXX</div>
 
         </div>
